--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.79"
+chrono = "0.4.31"
 clap = { version = "4.4.11", features = ["derive"] }
 statrs = "0.16.0"
